# skill-bench

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml  tarpaulin-report.html
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: analyze-actions.yml  ci.yml  codeql.yml  release.yml
scripts/: setup.sh
src/: lib.rs  main.rs  reference.rs  timeline.rs
src/assertions/: database.rs  file.rs  log.rs  mcp.rs  mod.rs  skill.rs  tests.rs  tool.rs
src/assets/harness-plugin/.claude-plugin/: plugin.json
src/assets/harness-plugin/skills/question-responder/: SKILL.md
src/cli/: args.rs  mod.rs
src/models/: check.rs  mod.rs  test.rs  tests.rs
src/output/: mod.rs  reporter.rs
src/runtime/: discovery.rs  embedded.rs  executor.rs  mod.rs  workspace.rs
src/state/: history.rs  mod.rs
src/timeline/: mod.rs
