[package]
name = "skill-bench"
version = "0.1.3"
edition = "2021"
description = "TOML-based test runner for skill testing"
authors = ["skill-bench contributors"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"

# TOML parsing
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Parallel execution
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal output
indicatif = "0.18"
console = "0.16"

# Time
chrono = { version = "0.4", features = ["serde"] }

# JSON / History
serde_json = "1.0"

# File operations
glob = "0.3"
tempfile = "3.10"
walkdir = "2.4"
fs_extra = "1.3"

# Database (for assertions)
rusqlite = { version = "0.39", features = ["bundled"] }

# Process execution
command-group = "5.0"
which = "8.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1.10"

# UUID (run ID)
uuid = { version = "1", features = ["v4"] }
